Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-72923

Scene3D does not stop processing even when visible property is set to false

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 5.12.3, 5.13.1, 5.14.0 Alpha
    • 5.12.0
    • Qt3D
    • None
    • fa12f14b2b97249b68652ed9f5fd0df0c0c27be4 (qt/qt3d/5.12)

      You can download my quick reproducible project here.

      https://git.qt.io/notohge/scene3dexamples

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            anton.kreuzkamp Anton Kreuzkamp
            notohge Norihito Tohge
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes